# py-ext-test

./: .gitignore  LICENSE  Makefile  README.md  setup.py
.github/workflows/: test.yml
py-ext-bin-test/: Makefile  pyproject.toml  setup.py
py-ext-bin-test/src/py_ext_bin_test/: external.py
py-ext-bin-test/test/: test_example.py  test_external.py
py-ext-data-poetry/: Makefile  pyproject.toml
py-ext-data-poetry/src/py_ext_data_poetry/: __init__.py  example.py
py-ext-data-poetry/tests/: test_example.py
py-ext-data-test/: Makefile  pyproject.toml  setup.py
py-ext-data-test/src/py_ext_data_test/: example.py
py-ext-data-test/test/: test_example.py
src/py_ext_test/: example.py  external.py
test/: test_example.py  test_external.py
