[tool.poetry]
name = "py-ext-data-poetry"
version = "0.1.0"
description = ""
authors = ["Mike Lynch <me@msl.sh>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^1.13"
pytest = "^8.3"
ruff = "^0.8"

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
python_version = "3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
